--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,151 +1,307 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Your Name - Advanced Portfolio</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
             background-color: #f4f4f4;
+            color: #333;
+            line-height: 1.6;
         }
-        .container {
-            width: 80%;
-            margin: auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
+
         header {
-            background-color: #333;
+            background-color: #222;
             color: #fff;
             padding: 20px 0;
             text-align: center;
+            position: relative;
+            z-index: 1;
         }
-        h1 {
+
+        header h1 {
+            font-size: 3em;
+            font-weight: bold;
             margin: 0;
+            text-transform: uppercase;
+            letter-spacing: 4px;
+            animation: fadeInDown 2s ease-in-out;
         }
+
+        header p {
+            font-size: 1.2em;
+            animation: fadeInUp 2s ease-in-out;
+        }
+
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+
         .section {
-            margin: 20px 0;
+            margin: 50px 0;
         }
-        h2 {
+
+        .section h2 {
+            font-size: 2.5em;
             color: #333;
+            text-align: center;
+            position: relative;
+            margin-bottom: 20px;
         }
+
+        .section h2::after {
+            content: "";
+            background-color: #007bff;
+            width: 100px;
+            height: 4px;
+            display: block;
+            margin: 0 auto;
+            animation: expand 1.5s ease-in-out;
+        }
+
+        /* About Me Section */
+        .about {
+            text-align: center;
+        }
+
+        .about p {
+            font-size: 1.1em;
+            max-width: 700px;
+            margin: 20px auto;
+            animation: fadeIn 2s ease-in-out;
+        }
+
+        /* Skills Section */
+        .skills {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+
+        .skills .skill-item {
+            flex: 1 1 30%;
+            margin: 20px;
+            padding: 20px;
+            background: #fff;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            transition: transform 0.3s ease;
+        }
+
+        .skills .skill-item:hover {
+            transform: translateY(-10px);
+        }
+
+        /* Experience Section */
+        .timeline {
+            position: relative;
+            margin: 0 auto;
+            padding: 40px 0;
+            max-width: 800px;
+        }
+
+        .timeline::before {
+            content: "";
+            position: absolute;
+            left: 50%;
+            width: 4px;
+            height: 100%;
+            background: #007bff;
+            transform: translateX(-50%);
+        }
+
+        .timeline-item {
+            margin-bottom: 50px;
+            position: relative;
+            width: 50%;
+            padding: 20px;
+            background: #fff;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            animation: slideIn 1.5s ease-in-out;
+        }
+
+        .timeline-item:nth-child(odd) {
+            left: 0;
+            transform: translateX(-20%);
+        }
+
+        .timeline-item:nth-child(even) {
+            left: 50%;
+            transform: translateX(20%);
+        }
+
+        .timeline-item::after {
+            content: "";
+            position: absolute;
+            top: 20px;
+            width: 20px;
+            height: 20px;
+            background-color: #007bff;
+            border-radius: 50%;
+        }
+
+        .timeline-item:nth-child(odd)::after {
+            right: -40px;
+        }
+
+        .timeline-item:nth-child(even)::after {
+            left: -40px;
+        }
+
+        /* Keyframes for Animations */
+        @keyframes fadeInDown {
+            0% {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeInUp {
+            0% {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        @keyframes expand {
+            0% {
+                width: 0;
+            }
+
+            100% {
+                width: 100px;
+            }
+        }
+
+        @keyframes slideIn {
+            0% {
+                opacity: 0;
+                transform: translateX(100px);
+            }
+
+            100% {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        /* Footer */
         footer {
             background-color: #333;
             color: #fff;
             text-align: center;
-            padding: 10px 0;
-            position: relative;
-            bottom: 0;
-            width: 100%;
+            padding: 20px 0;
         }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            margin-bottom: 10px;
-        }
-        a {
+
+        footer a {
             color: #007bff;
             text-decoration: none;
         }
-        a:hover {
+
+        footer a:hover {
             text-decoration: underline;
         }
+
     </style>
 </head>
+
 <body>
     <header>
         <h1>Your Name</h1>
         <p>AS400 Migration Specialist | Web Scraping Enthusiast | GUI Developer</p>
     </header>
+
     <div class="container">
-        
         <!-- About Me Section -->
-        <section class="section">
+        <section class="section about">
             <h2>About Me</h2>
-            <p>An experienced AS400 Migration Specialist with a strong background in web scraping and GUI development. Adept at delivering seamless system transitions, improving user experiences, and developing efficient web solutions.</p>
+            <p>An experienced AS400 Migration Specialist with a strong background in web scraping and GUI development.
+                Adept at delivering seamless system transitions, improving user experiences, and developing efficient web
+                solutions.</p>
         </section>
 
         <!-- Skills Section -->
         <section class="section">
             <h2>Skills</h2>
-            <ul>
-                <li>AS400 Migration</li>
-                <li>Python Programming</li>
-                <li>Web Scraping (BeautifulSoup, Selenium)</li>
-                <li>GUI Development (Tkinter, PyQt)</li>
-                <li>Database Management (SQL, DB2)</li>
-                <li>Version Control (Git, GitHub)</li>
-            </ul>
+            <div class="skills">
+                <div class="skill-item">
+                    <h3>AS400 Migration</h3>
+                </div>
+                <div class="skill-item">
+                    <h3>Python Programming</h3>
+                </div>
+                <div class="skill-item">
+                    <h3>Web Scraping (BeautifulSoup, Selenium)</h3>
+                </div>
+                <div class="skill-item">
+                    <h3>GUI Development (Tkinter, PyQt)</h3>
+                </div>
+                <div class="skill-item">
+                    <h3>Database Management (SQL, DB2)</h3>
+                </div>
+                <div class="skill-item">
+                    <h3>Version Control (Git, GitHub)</h3>
+                </div>
+            </div>
         </section>
 
         <!-- Experience Section -->
         <section class="section">
             <h2>Experience</h2>
-            <ul>
-                <li><strong>AS400 Migration Specialist</strong> - XYZ Corp (2021 - Present)</li>
-                <ul>
-                    <li>Led the migration of legacy AS400 systems to modern platforms, ensuring data integrity and minimal downtime.</li>
-                    <li>Developed tools to automate migration tasks, reducing manual workload by 40%.</li>
-                    <li>Collaborated with cross-functional teams to optimize system performance post-migration.</li>
-                </ul>
-                <li><strong>Web Scraping Developer</strong> - ABC Tech (2019 - 2021)</li>
-                <ul>
-                    <li>Developed and maintained automated web scraping solutions for data extraction using Python (BeautifulSoup, Selenium).</li>
-                    <li>Scraped large-scale data from e-commerce sites, providing insights that improved client decision-making.</li>
-                    <li>Optimized scraping scripts, reducing runtime by 30% while ensuring data accuracy.</li>
-                </ul>
-            </ul>
-        </section>
-
-        <!-- Education Section -->
-        <section class="section">
-            <h2>Education</h2>
-            <ul>
-                <li><strong>Bachelor of Science in Computer Science</strong> - University of Technology (2015 - 2019)</li>
-                <ul>
-                    <li>Graduated with Honors</li>
-                    <li>Specialized in Software Engineering and Database Management</li>
-                </ul>
-            </ul>
-        </section>
-
-        <!-- Certifications Section -->
-        <section class="section">
-            <h2>Certifications</h2>
-            <ul>
-                <li><strong>Certified AS400 Professional</strong> - Global Certification Authority (2022)</li>
-                <li><strong>Python for Data Science and Web Development</strong> - Coursera (2020)</li>
-                <li><strong>SQL and Databases</strong> - Udemy (2021)</li>
-            </ul>
-        </section>
-
-        <!-- Projects Section -->
-        <section class="section">
-            <h2>Projects</h2>
-            <ul>
-                <li><strong>AS400 Migration Tool</strong></li>
-                <ul>
-                    <li>Developed an automated tool for seamless migration from AS400 to modern systems, reducing project time by 50%.</li>
-                    <li><a href="https://github.com/Raghunadh-Naraharisetty/as400-migration-tool" target="_blank">View on GitHub</a></li>
-                </ul>
-                <li><strong>Web Scraping for Market Analysis</strong></li>
-                <ul>
-                    <li>Designed a web scraping solution to extract product pricing and availability from multiple e-commerce sites.</li>
-                    <li><a href="https://github.com/Raghunadh-Naraharisetty/web-scraping-market-analysis" target="_blank">View on GitHub</a></li>
-                </ul>
-            </ul>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <h3>AS400 Migration Specialist</h3>
+                    <p>XYZ Corp (2021 - Present)</p>
+                    <p>Led the migration of legacy AS400 systems to modern platforms, ensuring data integrity and minimal
+                        downtime.</p>
+                </div>
+                <div class="timeline-item">
+                    <h3>Web Scraping Developer</h3>
+                    <p>ABC Tech (2019 - 2021)</p>
+                    <p>Developed and maintained automated web scraping solutions for data extraction using Python
+                        (BeautifulSoup, Selenium).</p>
+                </div>
+            </div>
         </section>
     </div>
 
     <footer>
-        <p>Contact: nadhraghu001@gmail.com</p>
+        <p>Contact: youremail@example.com</p>
         <p><a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a></p>
     </footer>
+
 </body>
+
 </html>
